Fix for scrolling on iPhone; see #9

--- a/src/css/default/zebra_dialog.scss
+++ b/src/css/default/zebra_dialog.scss
@@ -153,6 +153,7 @@
     border-bottom-width: 2px;
     border-bottom-style: groove;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .ZebraDialog .ZebraDialog_NoTitle .ZebraDialog_Body {
