--- a/src/css/flat/zebra_dialog.scss
+++ b/src/css/flat/zebra_dialog.scss
@@ -101,6 +101,7 @@
 ---------------------------------------------------------------------------------------------------------------------*/
 .ZebraDialog .ZebraDialog_Body {
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .ZebraDialog .ZebraDialog_Icon {
